--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "echo",
             "type": "shell",
-            "command": "node bot.js",
+            "command": "node ./src/bot.js",
             "group": {
                 "kind": "test",
                 "isDefault": true
