--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.io": "^2.5.3",
     "discord.js": "^11.3.2",
     "puppeteer": "^1.6.0",
+    "sqlite": "^2.9.2",
     "winston": "^3.0.0"
   }
 }
