--- a/config/config.json
+++ b/config/config.json
@@ -6,8 +6,9 @@
         ":regional_indicator_n: :regional_indicator_o: :regional_indicator_o: :regional_indicator_b: :regional_indicator_s:",
         "You people really fizz me off."],
     "help": [
-        "!build - I'll give you a build for the input champion. The champion name must be one word, like '!build leesin'.",
+        "!build [champ] - I'll give you a build for the input champion. The champion name must be one word, like '!build leesin'.",
         "!random - I'll give you a random champion to play.",
+        "!ranking [username] - I'll look up the ranking information for the given summoner.",
         "!win - Sweet sweet victory.",
         "!lose - I'll let you know how good you are at video games so you feel better after a tough match.",
         "!restart - Restarts my web browser, use this if it crashes.",
