--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^11.3.2",
     "puppeteer": "^1.6.0",
     "sqlite": "^2.9.2",
+    "sqlite3": "^4.0.2",
     "winston": "^3.0.0"
   }
 }
