--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^4.1.4",
     "discord.io": "^2.5.3",
     "discord.js": "^11.3.2",
+    "node-gyp": "^3.7.0",
     "puppeteer": "^1.6.0",
     "sqlite": "^2.9.2",
     "sqlite3": "^4.0.2",
