--- a/config/config.json
+++ b/config/config.json
@@ -13,7 +13,6 @@
         "!win - Sweet sweet victory.",
         "!lose - I'll let you know how good you are at video games so you feel better after a tough match.",
         "!restart - Restarts my web browser, use this if it crashes.",
-        "!userInfo - I'll say hello and tell you when your account was created.",
-        "!time - Just in case nobody owns a watch."
+        "!free - I'll list the free champions for this week."
     ]
 }
