--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "puppeteer": "^1.6.0",
     "sqlite": "^2.9.2",
     "sqlite3": "^4.0.2",
+    "update": "^0.7.4",
     "winston": "^3.0.0"
   }
 }
