--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "curl-request": "^1.1.1",
     "discord.io": "^2.5.3",
     "discord.js": "^11.4.2",
     "node-gyp": "^3.8.0",
+    "querystring": "^0.2.0",
+    "r2": "^2.0.1",
+    "request": "^2.88.0",
     "sqlite": "^2.9.3",
     "sqlite3": "^4.0.2",
     "update": "^0.7.4",
