--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.io": "^2.5.3",
     "discord.js": "^11.4.2",
     "node-gyp": "^3.8.0",
+    "nodemailer": "^4.6.8",
     "querystring": "^0.2.0",
     "r2": "^2.0.1",
     "request": "^2.88.0",
