--- a/config/config.json
+++ b/config/config.json
@@ -10,7 +10,7 @@
         "!build, [champ] - I'll give you a build for the input champion.",
         "!random - I'll give you a random champion to play.",
         "!ranking, [username] - I'll look up the ranking information for the given summoner.",
-        "!favChamp, get/set, [championName] - I'll set your favorite champion or let you know what it currently is. Include the champion name when setting, do not include it when getting.",
+        "!setName, [summonerName] - I'll set your summoner name to the input argument so I know who you are.",
         "!win - Sweet sweet victory.",
         "!lose - I'll let you know how good you are at video games so you feel better after a tough match.",
         "!free - I'll list the free champions for this week.",
