--- a/config/config.json
+++ b/config/config.json
@@ -7,13 +7,13 @@
         "You people really fizz me off."],
     "help": [
         "Arguments are broken up by a comma followed by a space, for example: !favChamp, set, lee sin",
-        "!build, [champ] - I'll give you a build for the input champion.",
+        "!build [champ] - I'll give you a build for the input champion.",
         "!random - I'll give you a random champion to play.",
-        "!ranking, [username] - I'll look up the ranking information for the given summoner.",
-        "!setName, [summonerName] - I'll set your summoner name to the input argument so I know who you are.",
+        "!ranking [username] - I'll look up the ranking information for the given summoner.",
+        "!setName [summonerName] - I'll set your summoner name to the input argument so I know who you are.",
         "!win - Sweet sweet victory.",
         "!lose - I'll let you know how good you are at video games so you feel better after a tough match.",
         "!free - I'll list the free champions for this week.",
-        "!chest, [summoner] - Displays the champions that can earn mastery chests."
+        "!chest [summoner] - Displays the champions that can earn mastery chests."
     ]
 }
