Updated readme and help command with mastery command

--- a/config/config.json
+++ b/config/config.json
@@ -14,7 +14,8 @@
         "!win - Sweet sweet victory.",
         "!lose - I'll let you know how good you are at video games so you feel better after a tough match.",
         "!free - I'll list the free champions for this week.",
-        "!chest [summoner] - Displays the champions that can earn mastery chests."
+        "!chest [summoner] - Displays the champions that can earn mastery chests.",
+        "!mastery [champion] - Displays mastery information for a given champion."
     ],
     "usernames": [
         "T33m0isKool",
