--- a/League.Bot/League.Bot.csproj
+++ b/League.Bot/League.Bot.csproj
@@ -24,4 +24,7 @@
     <Folder Include="Services\" />
     <Folder Include="Commands\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Services\RiotAPI.cs" />
+  </ItemGroup>
 </Project>
