--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "querystring": "^0.2.0",
     "r2": "^2.0.1",
     "request": "^2.88.0",
+    "sequelize": "^5.21.5",
     "sqlite": "^2.9.3",
     "update": "^0.7.4",
     "winston": "^3.2.1"
