--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "dotenv": "^8.2.0",
     "jsdom": "^15.0.0",
     "querystring": "^0.2.0",
     "r2": "^2.0.1",
